# musikell

./: .gitmodules  Main.hs  flake.nix  musikell.cabal
app/: Main.hs
src/Cbits/Echoes/: .gitignore  CMakeLists.txt  build.sh
src/Cbits/Echoes/include/: IO.h  driver-linux.h  driver-mac.h  driver-windows.h  driver.h
src/Cbits/Echoes/src/: CMakeLists.txt  IO.c  driver-linux.c  driver-mac.c  driver.windows.c  main.c
src/Cbits/Interface/: Driver.hs
tune/: happy-birthday.mkl  ssssh.mkl
